# UIFySim

./: README.md  settings.gradle
HiroCamSDK/: CMakeLists.txt  build.gradle
HiroCamSDK/src/main/: AndroidManifest.xml
HiroCamSDK/src/main/cpp/: HiroCamDef.h  HiroCamSDK.cpp  HiroCamSDK.h  native-lib.cpp
HiroCamSDK/src/main/cpp/dependence/include/PPCS/: NDT_API.h  NDT_Error.h  NDT_Type.h  PPCS_API.h  PPCS_Error.h  WiPN_API.h  WiPN_Error.h  WiPN_StringEncDec.h
HiroCamSDK/src/main/cpp/dependence/include/mp4v2/: platform.h
HiroCamSDK/src/main/cpp/dependence/src/libmp4v2/: .cproject  .project
HiroCamSDK/src/main/cpp/dependence/src/libmp4v2/libplatform/time/: time.h
HiroCamSDK/src/main/cpp/dependence/src/libmp4v2/libutil/: Utility.cpp
HiroCamSDK/src/main/cpp/dependence/src/libmp4v2/mp4v2/: platform.h
HiroCamSDK/src/main/cpp/dependence/src/libmp4v2/src/: atom_avc1.cpp  atom_elst.cpp  atom_ftyp.cpp  atom_hdlr.cpp  atom_mdhd.cpp  atom_meta.cpp  atom_mvhd.cpp  atom_root.cpp  atom_standard.cpp  atom_stbl.cpp  atom_tkhd.cpp  atom_udta.cpp  atoms.h  enum.h  mp4.cpp  mp4atom.cpp  mp4file.cpp  mp4track.cpp  rtphint.cpp
HiroCamSDK/src/main/cpp/src/KeepAlive/: KeepAlive.cpp
HiroCamSDK/src/main/cpp/src/Push/: PushSDK.cpp  WiPN_API.c  WiPN_StringEncDec.c
HiroCamSDK/src/main/cpp/src/WifiConfig/Hisi/: HiLink.mm  HisiConfigureNetworkSDK.h
HiroCamSDK/src/main/cpp/src/WifiConfig/SinVoice/: MyPcmPlayerImp.m  MyPcmRecorderImp.m  SinVoiceConfigWifi.h  SinVoiceConfigWifi.mm
HiroCamSDK/src/main/cpp/src/common/component/AudioCodec/: AudioCodec.cpp  AudioCodec.h  adpcm.cpp  g726.c  g726.h  g726_16.c  g72x.c  g72x.h  private.h
HiroCamSDK/src/main/cpp/src/common/component/P2P/: ISock.h
HiroCamSDK/src/main/cpp/src/common/component/P2P/SYUN/: SYSock.cpp  SYSock.h
HiroCamSDK/src/main/cpp/src/common/component/Record/: AVIRecord.cpp  AVIRecord.h  FilePS.cpp  FilePS.h  IRecord.h  MP4Record.cpp  MP4Record.h  Record.cpp  Record.h  RecordFactory.cpp  RecordFactory.h
HiroCamSDK/src/main/cpp/src/common/component/Record/avi/: AVIEncoder.cpp  AVIEncoder.h  gmavi.cpp  gmavi.h  gmavi_api.h  gmtypes.h
HiroCamSDK/src/main/cpp/src/common/component/Record/mp4/: MP4Encoder.cpp  MP4Encoder.h
HiroCamSDK/src/main/cpp/src/common/component/Record/ps/: PSPacket.cpp  PSPacket.h  psHeader.cpp  psHeader.h
HiroCamSDK/src/main/cpp/src/common/component/StreamBuffer/: CStreamBuffer.cpp  CStreamBuffer.h
HiroCamSDK/src/main/cpp/src/common/component/VideoCodec/: DecoderManager.cpp  DecoderManager.h
HiroCamSDK/src/main/cpp/src/common/controller/: ApiImpl.cpp  ApiImpl.h  HandleManager.cpp  HandleManager.h
HiroCamSDK/src/main/cpp/src/common/protocol/HiroCam/: HiroCamParse.cpp  HiroCamParse.h  HiroCamProtocol.h
HiroCamSDK/src/main/cpp/src/common/protocol/common/: DataProc.cpp  DataProc.h  IParse.h
HiroCamSDK/src/main/cpp/src/platform/BaseDataType/: BaseDataType.h  BaseFunc.cpp  BaseFunc.h
HiroCamSDK/src/main/cpp/src/platform/Thread/: AutoLock.cpp  AutoLock.h  MsgQue.hpp  MsgThread.hpp  Thread.cpp  Thread.h
HiroCamSDK/src/main/cpp/src/platform/Time/: HRTime.cpp  HRTime.h
HiroCamSDK/src/main/java/com/hisilicon/hisilinkapi/: HisiLibApi.java
HiroCamSDK/src/main/java/com/libra/sinvoice/: Common.java  Encoder.java  VoiceRecognition.java
HiroCamSDK/src/main/java/hiro/com/hirocamsdk/: GetDevInfo.java  GetPirInfo.java  HRSDKLogin.java  HiroCamJNI.java  RecordInfo.java  RecordList.java  RecordMap.java  SDCardInfo.java  SetDevInfo.java  SetPirInfo.java  SinVoiceHelper.java
HiroCamSDK/src/main/res/values/: strings.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/fyuilib/luoc/com/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AddBell1+2UID.xml  AddBell1.xml  AddBell2+3Pwd.xml  AddBell2Wifi.xml  AddBell3Pwd.xml  AddBell4Connect.xml  AddBell5Name.xml  SDCard.xml  bellsetting.xml  camItem.xml  live.xml  main.xml  scanConn.xml  setting.xml  setting_changepwd.xml  setting_devinfo.xml  setting_flipormirror.xml  setting_motion.xml  setting_powerfreq.xml  setting_shared.xml  setting_volume.xml
app/src/main/assets/language/: cn.xml  en.xml
app/src/main/cpp/: UIMarkup.cpp  UIMarkup.h  native-lib.cpp
app/src/main/java/fyuilib/luoc/com/activity/: LiveActivity.java  MainActivity.java  SDCardActivity.java  SysSettingActivity.java
app/src/main/java/fyuilib/luoc/com/control/: CButtonUI.java  CCalendarUI.java  CCalendarView.java  CComboUI.java  CCommonFunUI.java  CContainerUI.java  CControlUI.java  CDateUI.java  CEditUI.java  CGifUI.java  CImageUI.java  CLabelUI.java  CLayoutUI.java  CListElementUI.java  CListUI.java  CListUI2.java  CListUIAdapter.java  CMBSliderUI.java  CNumberUI.java  COptionUI.java  CProgressUI.java  CRichEditUI.java  CScrollViewUI.java  CSliderUI.java  CSufaceView.java  CSwitchUI.java  CTabLayoutUI.java  CTextUI.java  CTimeUI.java  UIAttribute.java  UIListAttribute.java  UIManagerDelegate.java  UITabAttribute.java
app/src/main/java/fyuilib/luoc/com/core/: CXmlParse.java  FyUILibJNI.java  UIDlgBuild.java  (+1 more)
app/src/main/res/: Test.xml
app/src/main/res/layout/: activity_main.xml  activity_scan.xml  activity_scan_zxing.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/fyuilib/luoc/com/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
qrcodecore/: gradle.properties
zbar/: gradle.properties
(+24 files in other folders)
